Doc update - deleted outdated documentation

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -120,7 +120,6 @@ TODO
 * Add urlencoding to the GUI `Commands' page.
 
 * Add plugins support to the GUI to do:
-** bulk editing
 ** switching folders (environments)
 ** rollback using subversion
 
@@ -225,42 +224,7 @@ Explorer 8 to 11, Safari and also the Browsers on Maemo, iPad and Android device
 Upgrade
 ~~~~~~~
 
-.Upgrading from a version < 1.149 to a version >= 1.149
-
-The `command' and `svcdesc' fields are now urlencoded so the `.setup' files need to be converted. Take a backup then do the following, changing the FOLDER variable if necessary.
-
-NOTE: Only run the following commands ONCE when upgrading to 1.149, otherwise your data will be double-urlencoded!
-
-----
-# Change the FOLDER then copy-paste the rest to the target server.
-FOLDER="local"
-
-# Backup the FOLDER
-mkdir ~/delme
-cp -a /etc/nagios/objects/${FOLDER} ~/delme/
-
-# Set up urlencoding function
-urlencode() { arg="$1"; i="0"; while [ "$i" -lt ${#arg} ]; do c=${arg:$i:1}; if [[ "$c" =~ [0-9a-zA-Z_.-] ]]; then echo -n "$c"; elif [[ "$c" = " " ]]; then echo -n "+"; else echo -n "%"; printf "%X" "'$c'"; fi; i=$((i+1)); done; }
-
-# Update the .setup files
-FILE="servicesets"
-while IFS=, read c1 c2 c3 c4 c5; do echo -n "$c1,$c2,"; urlencode "$c3"; echo -n ","; urlencode "$c4"; echo ",$c5"; done </etc/nagios/objects/${FOLDER}/setup/${FOLDER}_${FILE}.setup >/tmp/${FOLDER}_${FILE}.setup
-sed -i "s/%60/%2C/g" /tmp/${FOLDER}_${FILE}.setup
-mv -f /tmp/${FOLDER}_${FILE}.setup /etc/nagios/objects/${FOLDER}/setup/${FOLDER}_${FILE}.setup
-chown apache: /etc/nagios/objects/${FOLDER}/setup/${FOLDER}_${FILE}.setup
-FILE="services"
-while IFS=, read c1 c2 c3 c4 c5; do echo -n "$c1,$c2,"; urlencode "$c3"; echo -n ","; urlencode "$c4"; echo ",$c5"; done </etc/nagios/objects/${FOLDER}/setup/${FOLDER}_${FILE}.setup >/tmp/${FOLDER}_${FILE}.setup
-sed -i "s/%60/%2C/g" /tmp/${FOLDER}_${FILE}.setup
-mv -f /tmp/${FOLDER}_${FILE}.setup /etc/nagios/objects/${FOLDER}/setup/${FOLDER}_${FILE}.setup
-chown apache: /etc/nagios/objects/${FOLDER}/setup/${FOLDER}_${FILE}.setup
-
-# Now update nagrestconf
-----
-
-.All versions
-
-After the upgrade run `/usr/bin/upgrade_setup_files.sh'. It can be run any
-number of times and will not harm data if it is run unnecessarily.
+Use the package manager.
 
 Install
 ~~~~~~~
@@ -350,1062 +314,6 @@ Status
 ~~~~~~
 
 All Nagios directives are now implemented in the REST interface. A smaller set of Nagios directives are supported in the Web GUI.
-
-COOK BOOK
----------
-
-Using CURL
-~~~~~~~~~~
-
-TODO
-
-Interesting curl options:
-
-* --key KEY
-* --socks4 IP:PORT
-* -u USER:PASS
-
-*Method 1: Use a `.netrc' file*
-
-----
-cat <EnD >>~/.netrc
-machine 1.2.3.4 login nagrestconf password thepassword
-EnD
-
-cat <EnD >>env1.conf
-OPTS="-n"
-IP=1.2.3.4
-FOLDER="env1"
-EnD
-----
-
-*Method 2: Don't Use a `.netrc' file*
-
-----
-cat <EnD >>env1.conf
-OPTS="-u nagrestconf:thepassword"
-IP=1.2.3.4
-FOLDER="env1"
-EnD
-----
-
-*Test*
-
-----
-# Load the conf file made above
-source env1.conf
-
-# RAW output
-curl $OPTS -kn https://$IP/rest/show/hosts'?json=\{"folder":"'$FOLDER'"\}'
-
-# PRETTY output
-curl $OPTS -kn https://$IP/rest/show/hosts'?json=\{"folder":"'$FOLDER'"\}' | JSON.sh -b | grep ',"name"'
-----
-
-TODO
-
-Deleting Environments
-~~~~~~~~~~~~~~~~~~~~~
-
-There is no way to delete an entire environment using the REST interface. An environment is initially added using 'slc_configure' on the Worker Nagios, and 'dcc_configure' on the Master Nagios.
-
-To disable an environment, or `Folder', so it disappears from Nagios:
-
-1. Stop the Worker server.
-+
-Either shutdown the server or stop Nagios and associated services.
-+
-2. Edit `/etc/nagios/nagios.cfg' on the Master.
-* Find the `cfg_dir=' line containing the folder name and comment it out.
-* Restart Nagios with `/etc/init.d/nagios restart'.
-
-At this point the environment is disabled and will no longer show in the Master Nagios GUI, but it can be easily re-enabled. However, It may be necessary to completely delete an environment. This could be due to:
-
-* An aborted/erroneous Worker installation.
-* To reinstall from scratch.
-* Because it is no longer required.
-
-To completely delete an environment:
-
-1. On the Worker.
-* Either shutdown the server or stop Nagios and associated services.
-* Delete the `/etc/nagios' directory.
-2. On the Master.
-* Find the `cfg_dir=' line, in `/etc/nagios/nagios.cfg', containing the folder name and delete it.
-* Restart Nagios with `/etc/init.d/nagios restart'.
-* Delete the similarly named directory in `/etc/nagios/repos/_folder_name_' and
-  `/etc/nagios/objects/_folder_name_'.
-
-Export Service Sets
-~~~~~~~~~~~~~~~~~~~
-
-Service sets can be really useful for automation but there is no `import' or
-`export' feature. It's easy to create service sets in the GUI, but how can
-they be exported?
-
-*Solution 1: Copy the `.setup' file*
-
-This will work but bypasses REST and introduces the risk of making mistakes,
-such as incorrect file permissions, or accidental overwrites etc., but is
-easier than the REST method.
-
-*Steps:*
-
-Simply copy the `/etc/nagios/objects/<FOLDER>/setup/<FOLDER>_servicesets.setup' file
-to the other server, changing the name of the file to match the new FOLDER.
-
-Ensure the file is owned by the user that runs Apache, then view and apply using
-the nagrestconf GUI.
-
-*Solution 2: Export to a file and use REST*
-
-This has the additional benefit of being able to update many servers from
-a central location and allows REST to check each entry before adding.
-
-*Steps:*
-
-Run the following command on the Nagios Worker that holds the service sets that
-need exporting, changing the FOLDER variable only:
-
-----
-FOLDER="local"; FILE="/etc/nagios/objects/$FOLDER/setup/${FOLDER}_servicesets.setup"; \
-( echo "N=-1"; cat $FILE | while IFS=, read a b c d e; do echo $a; done | sort -u | \
-while read a; do echo -en "serviceset_name[++N]=\"$a\"\nserviceset_svctemplate[N]="; \
-echo -e "\"std_stmpl\"\nserviceset[N]='"; grep "^$a," $FILE | while IFS=, read a1 b1 c1 \
-d1 e1; do echo '\"'"$c1"'\",\"svcdesc\":\"'"$d1"'\",\"template\":\"'"$b1"'\"'; done; echo "'"; \
-done ) | sed 's/%22/%5C%22/g' >~/script_vars
-----
-
-The bash command above creates configuration variables that can appended to a
-configuration script so copy `~/script_vars' to a linux box.
-
-On the linux box create a configuration file and append `~/script_vars' to it,
-but change `MASTER_NAGIOS_IP' to the IP address of the Master Nagios:
-
-----
-# Go to the home directory
-cd
-
-# Create a configuration stub
-cat <<EnD >worker.conf
-# CURL OPTS
-OPTS="-u nagrestconf:a_password"
-
-# IP: The ip address of the remote worker
-IP=MASTER_NAGIOS_IP
-
-# FOLDER: the folder name to work in on the remote worker
-FOLDER="pvlive"
-
-# DELETE: 1 - delete existing config, 0 - don't
-DELETE=1
-
-EnD
-
-# Append the generated service set config
-cat ~/script_vars >>worker.conf
-----
-
-Now apply the configuration to the remote Nagios Worker using a script:
-
-----
-cat <<EnD >replace_servicesets.sh
-#!/bin/bash
-# Uncomment the following line to show the commands without running them.
-#curl() { :; }
-[[ -z $1 ]] && {
-    echo "Usage: `basename $0` CONFFILE"
-    exit 0
-}
-[[ ! -r $1 ]] && {
-    echo "$1 unreadable."
-    exit 0
-}
-. $1
-if [[ $DELETE -eq 1 ]]; then
-echo "-----------------------------------------------------------"
-echo "- Delete EVERYTHING"
-echo "-----------------------------------------------------------"
-echo
-    echo curl $OPTS  -knX POST \
-        -d "'json={\"folder\":\"$FOLDER\", \"name\":\".*\",
-                  \"svcdesc\":\".*\"}'" \
-        https://${IP}/rest/delete/servicesets
-    curl $OPTS  -knX POST \
-        -d "json={\"folder\":\"$FOLDER\", \"name\":\".*\",
-                  \"svcdesc\":\".*\"}" \
-        https://${IP}/rest/delete/servicesets
-    echo
-fi
-echo
-echo "-----------------------------------------------------------"
-echo "- Add Service Sets"
-echo "-----------------------------------------------------------"
-echo
-for i in `seq 0 $((${#serviceset[*]}-1))`; do
-    while read j; do
-        [[ -z $j || $j == "#"* ]] && continue
-        # Allow use of a custom service template
-        if ( echo "$i" | grep -qs "template\":" ); then
-        echo curl $OPTS  -knX POST \
-            -d "'json={\"folder\":\"$FOLDER\",
-            \"name\":\"${serviceset_name[$i]}\",
-            \"command\":$j}'" https://${IP}/rest/add/servicesets
-        curl $OPTS  -knX POST \
-            -d "json={\"folder\":\"$FOLDER\",
-            \"name\":\"${serviceset_name[$i]}\",
-            \"command\":$j}" https://${IP}/rest/add/servicesets
-        else
-        echo curl $OPTS  -knX POST \
-            -d "'json={\"folder\":\"$FOLDER\",
-            \"name\":\"${serviceset_name[$i]}\",
-            \"template\":\"${serviceset_svctemplate[$i]}\",
-            \"command\":$j}'" https://${IP}/rest/add/servicesets
-        curl $OPTS  -knX POST \
-            -d "json={\"folder\":\"$FOLDER\",
-            \"name\":\"${serviceset_name[$i]}\",
-            \"template\":\"${serviceset_svctemplate[$i]}\",
-            \"command\":$j}" https://${IP}/rest/add/servicesets
-        fi
-        echo
-    done < <( echo "${serviceset[$i]}" | sed "s/qUoTe/'/g" )
-done
-echo
-EnD
-
-# Make it runnable
-chmod +x replace_servicesets.sh
-
-# And, run it...
-./replace_servicesets.sh worker.conf
-----
-
-The progress can be watched by refreshing the `Service Sets' page in the
-nagrestconf GUI on the remote worker.
-
-WALK-THROUGHS
--------------
-
-Single Server from Scratch (Redhat/Centos 5)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-These instructions are for creating a single, stand-alone, Nagios server that
-will be configured using nagrestconf. On modest hardware it should be able to
-monitor up to around 500 servers.
-
-The server can be created in a partitioned system using a
-chroot/systemd-nspawn/lxc environment if necessary, for production or test
-purposes.
-
-First, install the Centos/RedHat 5.x operating system, then:
-
-Set up Yum to use the EPEL and smorg repositories:
-
-----
-wget -O - http://www.smorg.co.uk/repo/stable/rhel5/smorg.repo > /etc/yum.repos.d/smorg.repo
-rpm -ivh http://mirror.bytemark.co.uk/fedora/epel/5/i386/epel-release-5-4.noarch.rpm
-----
-
-Install all required software:
-
-----
-yum install nagrestconf nagios-www 
-----
-
-Optionally bulk-install plugins (with the check_any patch included):
-
-----
-yum install smorg-nagios-plugins smorg-nagios-plugins-extra smorg-nrpe smorg-nrpe-plugin
-----
-
-Create the base Nagios configuration from the nagrestconf sample:
-
-----
-cd /etc/
-mv nagios/ nagios.dist
-cp -a /usr/share/doc/nagrestconf-1*/initial-config/ nagios
-nagrestconf_install -a
-slc_configure --folder=local
-----
-
-Create a test configuration using REST:
-
-----
-bash /usr/share/doc/nagrestconf-1.*/bulk-loading/REST_setup_local.sh
-----
-
-Manually restart Nagios (in case crond is not running):
-
-----
-rm /tmp/nagios_restart_request
-/usr/bin/restart_nagios
-----
-
-Create a Nagios password:
-
-----
-htpasswd -bc /etc/nagios/htpasswd.users nagiosadmin a_decent_password
-/etc/init.d/httpd restart
-----
-
-Now connect to http://127.0.0.1/nagrestconf and configure the server. Use ssh port forwarding to connect to the nagrestconf GUI if necessary, or configure Apache in `/etc/httpd/conf.d/nagrestconf.conf'.
-
-Distributed Monitoring from Scratch
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-TODO - incomplete/unchecked...
-
-In this scenario, nagrestconf provides the `configuration sync' component
-mentioned in the mod_gearman documentation,
-https://github.com/sni/mod_gearman#distributed-setup-with-remote-scheduler[Distributed
-Setup With Remote Scheduler], using the dup_server option. For historical reference the
-dup_server option was originally added to mod_gearman by the author of nagrestconf.
-
-Setting up a distributed environment involves:
-
-1. Choosing short `folder' names for each environment.
-+
-Each Nagios Worker will host a single environment in a single `folder'.
-The Nagios Master will prefix many items with the `folder' name, for example,
-all host group names will be prefixed with the `folder' name, and this will
-be shown in the Nagios GUI on the Master Nagios. For this reason try to keep
-`folder' names as short as possible.
-+
-2. Building the Master Nagios.
-** Building the Master Nagios.
-+
-OR
-+
-** Building the Master Nagios in a Chroot
-3. Building the Worker Nagios (repeat as necessary).
-
-Building the Master Nagios
-^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-TODO - incomplete/unchecked...
-
-The backup and high-availability features of a virtual infrastructure could allow for a single Master Nagios.
-
-----
-                  IP x                  IP x
-                    /                      \
-               |___/                        \___|
-               |                                |  results are sent to the master nagios
-               |   Thruk GUI could be used to   |  servers using the gearman protocol
-               |   provide an enhanced but      |             /
-               |   familiar nagios GUI          |       |    /
- Client   ==>  |              \                 |       +---<-----< nagios worker 1 >
- access   ==>  |        +--------------+        |       |
- to the   ==>  |        | Master       |        |       +---<-----< nagios worker 2 >
- Web GUI  ==>  |--->----| Nagios       |        |---<---|
-               |        |              |        |       +---<-----< nagios worker .. >
-               |        |              |---<----|       |
-               |        +--------------+        |       +---<-----< nagios worker N >
-               |                                |       |       \
-               |                                |                \                       
-               |                                |   nagrestconf sends configuration to
-               |                                |   master nagios using subversion
-                                                    mirroring.
-----
-
-The Worker Nagios, which sends the service check results to the Master Nagios,
-needs to be created. Building the Worker consists of four main steps:
-
-1. Install software
-2. Test the installed software
-3. Configure Apache
-4. Configure the system
-
-Install software
-++++++++++++++++
-
-Set up Yum to use the EPEL and smorg repositories:
-
-----
-wget -O - http://www.smorg.co.uk/repo/stable/rhel5/smorg.repo > /etc/yum.repos.d/smorg.repo
-rpm -ivh http://mirror.bytemark.co.uk/fedora/epel/5/i386/epel-release-5-4.noarch.rpm
-----
-
-Log on to the new Nagios virtual machine and install the software.
-
-----
-ssh user@$NEWSERVER
-sudo su -
-yum install nagrestconf smorg-gearmand mod_gearman nagios-www \
-            smorg-nagios-plugins smorg-nagios-plugins-extra \
-            smorg-nrpe smorg-nrpe-plugin nsca pnp4nagios \                                                                                                                       
-            php53-gd mk-livestatus                                                                                                                               
-----
-
-Test the Installed Software
-+++++++++++++++++++++++++++
-
-Don't skip this step as it also sets up some files ready for the `real' install later on.
-
-Make a brand new Nagios configuration using the nagrestconf sample.
-
-----
-cd /etc/
-mv nagios/ nagios.dist
-cp -a /usr/share/doc/nagrestconf-1*/initial-config/ nagios
-nagrestconf_install -a --dcc
-slc_configure --folder=local
-----
-
-Create a simple test configuration using REST from the example in the nagrestconf docs.
-
-----
-bash /usr/share/doc/nagrestconf-1.*/bulk-loading/REST_setup_local.sh
-----
-
-Add a nagiosadmin user with password set to nagiosadmin. This is just for testing.
-
-----
-htpasswd -bc /etc/nagios/htpasswd.users nagiosadmin nagiosadmin
-----
-
-And now allow anyone to connect without authenticating.
-
-----
-sed -i 's/\([[:space:]]*\)\(Allow from .*\)/\1#\2\n\1Allow from all/' /etc/httpd/conf.d/nagrestconf.conf
-/etc/init.d/httpd restart
-----
-
-Connect to \http://NEWSERVER/nagrestconf/ using a Web Browser and the nagrestconf GUI should be shown with two server entries and a fully working test configuration.
-
-Connect to \http://NEWSERVER/nagios and check that it works, using the user nagiosadmin with password nagiosadmin.
-
-Once nagios and nagrestconf are verified working continue to the next section.
-
-Configure Apache
-++++++++++++++++
-
-This is an example HTTP daemon configuration to restrict access to secure
-HTTP with Basic authentication only.
-
-----
-cat >/etc/httpd/conf.d/nagios.conf <<EnD
-ScriptAlias /nagios/cgi-bin "/usr/lib64/nagios/cgi"
-
-<Directory "/usr/lib64/nagios/cgi">
-   SSLRequireSSL
-   Options ExecCGI
-   AllowOverride None
-   Order allow,deny
-   Allow from all
-#  Order deny,allow
-#  Deny from all
-#  Allow from 127.0.0.1
-   AuthName "Nagios Access"
-   AuthType Basic
-   AuthUserFile /etc/nagios/htpasswd.users
-   Require valid-user
-</Directory>
-
-Alias /nagios "/usr/share/nagios"
-
-<Directory "/usr/share/nagios">
-   SSLRequireSSL
-   Options None
-   AllowOverride None
-   Order allow,deny
-   Allow from all
-#  Order deny,allow
-#  Deny from all
-#  Allow from 127.0.0.1
-   AuthName "Nagios Access"
-   AuthType Basic
-   AuthUserFile /etc/nagios/htpasswd.users
-   Require valid-user
-</Directory>
-EnD
-cat >/etc/httpd/conf.d/nagrestconf.conf <<EnD
-Alias /nagrestconf "/usr/share/nagrestconf/htdocs/nagrestconf"
-
-<Directory /usr/share/nagrestconf/htdocs/nagrestconf/>
-
-  SSLRequireSSL
-
-  # Only allow from the local host
-  #Order deny,allow
-  #Deny from all
-  #Allow from 127.0.0.1
-
-  AllowOverride All
-
-  # Require authentication
-  AuthName "Nagrestconf Access"
-  AuthType Basic
-  AuthUserFile /etc/nagios/nagrestconf.users
-  Require valid-user
-
-</Directory>
-EnD
-cat >/etc/httpd/conf.d/rest.conf <<EnD
-Alias /rest /usr/share/nagrestconf/htdocs/rest
-
-<Directory /usr/share/nagrestconf/htdocs/rest/>
-
-  SSLRequireSSL
-
-  # Only allow from the local host
-  #Order deny,allow
-  #Deny from all
-  #Allow from 127.0.0.1
-
-  AllowOverride All
-
-  # Require authentication
-  AuthName "REST Access"
-  AuthType Basic
-  AuthUserFile /etc/nagios/rest.users
-  Require valid-user
-
-</Directory>
-EnD
-----
-
-Activate the new httpd configuration
-
-----
-/etc/init.d/httpd restart
-----
-
-Configure the system
-++++++++++++++++++++
-
-Delete the 'local' configuration created previously and copy the nagrestconf example configuration again.
-
-----
-/etc/init.d/nagios stop
-cd /etc
-rm -rf nagios
-cp -av /usr/share/doc/nagrestconf-1*/initial-config.dcc/ nagios
-----
-
-*Optionally* create a new `/etc/nagios/cgi.cfg' - this allows any authenticated
-to use the gui in read/write mode, except the `nagios' user, who has read-only
-access.
-
-----
-cat >/etc/nagios/cgi.cfg <<EnD
-main_config_file=/etc/nagios/nagios.cfg
-physical_html_path=/usr/share/nagios
-url_html_path=/nagios
-show_context_help=0
-use_pending_states=1
-use_authentication=1
-use_ssl_authentication=0
-authorized_for_system_information=nagiosadmin
-authorized_for_configuration_information=nagiosadmin
-authorized_for_system_commands=nagiosadmin
-authorized_for_all_services=*
-authorized_for_all_hosts=*
-authorized_for_all_service_commands=*
-authorized_for_all_host_commands=*
-authorized_for_read_only=nagios
-default_statusmap_layout=5
-default_statuswrl_layout=4
-ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
-refresh_rate=90
-result_limit=100
-escape_html_tags=0
-action_url_target=_blank
-notes_url_target=_blank
-lock_author_names=1
-EnD
-----
-
-Comment out existing livestatus broker_module line and add a new one.                                                                                                            
-                                                                                                                                                                                   
-----
-sed -n 's/\(broker_module=.*livestatus\.o.*\)/#\1/p' /etc/nagios/nagios.cfg                                                                                                      
-echo 'broker_module=/usr/lib64/mk-livestatus/livestatus.o /var/log/nagios/rw/live' \                                                                                             
-    >>/etc/nagios/nagios.cfg                                                                                                                                                     
-----
-
-Comment out existing broker_module lines and append new lines.
-
-----
-# LIVESTATUS
-sed -i 's/\(broker_module=.*livestatus\.o.*\)/#\1/' /etc/nagios/nagios.cfg
-# MOD_GEARMAN
-sed -i 's/\(broker_module=.*mod_gearman\.o.*\)/#\1/' /etc/nagios/nagios.cfg
-echo 'broker_module=/usr/lib64/mod_gearman/mod_gearman.o config=/etc/mod_gearman/mod_gearman_neb.conf' \
-    >>/etc/nagios/nagios.cfg
-----
-
-Mod_gearman adjustments (Change 'the_shared_key' to the correct key).
-
-----
-sed -i 's/^key=.*/key=the_shared_key/' \
-    /etc/mod_gearman/mod_gearman_neb.conf \
-    /etc/mod_gearman/mod_gearman_worker.conf
-sed -i 's/^eventhandler=.*/eventhandler=no/' \
-    /etc/mod_gearman/mod_gearman_neb.conf
-sed -i 's/^services=.*/services=no/' \
-    /etc/mod_gearman/mod_gearman_neb.conf
-sed -i 's/^hosts=.*/hosts=no/' \
-    /etc/mod_gearman/mod_gearman_neb.conf
-----
-
-Add the initial users.
-
-----
-htpasswd -c /etc/nagios/rest.users nagrestconf
-htpasswd -c /etc/nagios/htpasswd.users nagiosadmin
-htpasswd -b /etc/nagios/htpasswd.users nagios nagios
-htpasswd -c /etc/nagios/nagrestconf.users your_userid
-----
-
-Make sure things are set to start up on initial boot.
-
-----
-chkconfig nrpe on
-chkconfig gearmand on
-chkconfig nagios on
-chkconfig httpd on
-chkconfig mod_gearman_worker off
-----
-
-Configure as a Nagios Master.                                                                                                                                                    
-  
-----
-sed -i 's/\(^#*DCC=.*\)/\DCC=1/' /etc/nagrestconf/csv2nag.conf                                                                                                                   
-----
-
-Restart everything.
-
-----
-/etc/init.d/httpd restart
-/etc/init.d/gearmand restart
-/etc/init.d/mod_gearman_worker stop
-/etc/init.d/nagios restart
-----
-
-*Final Steps*
-
-Due to the change in security settings the nagrestconf GUI will not work, and
-'/etc/nagrestconf/nagrestconf.ini' will need editing. Edit 'nagrestconf.ini'
-and check that the nagrestconf GUI works.
-
-Check that the following crontabs are present using 'crontab -l'.
-
-----
-* * * * * /usr/bin/update_nagios
-*/10 * * * * /usr/bin/auto_reschedule_nagios_check
-----
-
-Ensure the RPM added the extra sudoers entries to /etc/sudoers:
-
-----
-Defaults:%nagios !requiretty
-%nagios ALL = NOPASSWD: /usr/sbin/nagios -v *, /usr/bin/csv2nag -y all
-----
-
-Continue on to `Building the Worker Nagios (Redhat/Centos 5)' below to complete
-the configuration.
-
-Building the Master Nagios in a Chroot
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-When installed on physical hardware, a `chroot'ed system could simplify
-high-availability failover for the Master Nagios - A shared disk, or
-DRBD, could be used to protect against hardware failure.
-
-----
-              _.-----._
-            .- shared  -.
-            |-_ disk  _-|
-            `._~-----~_.'
-              |"-----"|
-              |       X
-    +----------+    +----------+
-    | Master   |    | Failover |
-    | Nagios   |----| Partner  |
-    |          |    |          |
-    +----------+    +----------+
-    ____________________________ IP x
-        ^
-        |
-   check results
-        |              +------+
-        |     /     +-------+ |
-        '--<-|   +--------+ | |   Worker Nagios servers
-              \  | Worker | |-+   at other Data Centres.
-                 | Nagios |-+               
-                 +--------+                
-
-   IP x - An IP address for use by the Master or Failover
-
-----
-
-TODO
-
-Continue on to `Building the Worker Nagios (Redhat/Centos 5)' below to complete
-the configuration.
-
-Building the Worker Nagios (Redhat/Centos 5)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-The Worker Nagios, which sends the service check results to the Master Nagios,
-needs to be created. Building the Worker consists of four main steps:
-
-1. Install software
-2. Test the installed software
-3. Configure Apache
-4. Configure the system
-
-Install software
-++++++++++++++++
-
-Set up Yum to use the EPEL and smorg repositories:
-
-----
-wget -O - http://www.smorg.co.uk/repo/stable/rhel5/smorg.repo > /etc/yum.repos.d/smorg.repo
-rpm -ivh http://mirror.bytemark.co.uk/fedora/epel/5/i386/epel-release-5-4.noarch.rpm
-----
-
-Log on to the new Nagios virtual machine and install the software.
-
-----
-ssh user@$NEWSERVER
-sudo su -
-yum install nagrestconf smorg-gearmand-server mod_gearman nagios-www \
-            smorg-nagios-plugins smorg-nagios-plugins-extra \
-            smorg-nrpe smorg-nrpe-plugin MySQL-shared-compat
-----
-
-Test the Installed Software
-+++++++++++++++++++++++++++
-
-Don't skip this step as it also sets up some files ready for the `real' install later on.
-
-Make a brand new Nagios configuration using the nagrestconf sample.
-
-----
-cd /etc/
-mv nagios/ nagios.dist
-cp -a /usr/share/doc/nagrestconf-1*/initial-config/ nagios
-nagrestconf_install -a
-slc_configure --folder=local
-----
-
-Create a simple test configuration using REST from the example in the nagrestconf docs.
-
-----
-bash /usr/share/doc/nagrestconf-1.*/bulk-loading/REST_setup_local.sh
-----
-
-Add a nagiosadmin user with password set to nagiosadmin. This is just for testing.
-
-----
-htpasswd -bc /etc/nagios/htpasswd.users nagiosadmin nagiosadmin
-----
-
-And now allow anyone to connect without authenticating.
-
-----
-sed -i 's/\([[:space:]]*\)\(Allow from .*\)/\1#\2\n\1Allow from all/' /etc/httpd/conf.d/nagrestconf.conf
-/etc/init.d/httpd restart
-----
-
-Connect to \http://NEWSERVER/nagrestconf/ using a Web Browser and the nagrestconf GUI should be shown with two server entries and a fully working test configuration.
-
-Connect to \http://NEWSERVER/nagios and check that it works, using the user nagiosadmin with password nagiosadmin.
-
-Once nagios and nagrestconf are verified working continue to the next section.
-
-Configure Apache
-++++++++++++++++
-
-This is an example HTTP daemon configuration to restrict access to secure
-HTTP with Basic authentication only.
-
-----
-cat >/etc/httpd/conf.d/nagios.conf <<EnD
-ScriptAlias /nagios/cgi-bin "/usr/lib64/nagios/cgi"
-
-<Directory "/usr/lib64/nagios/cgi">
-   SSLRequireSSL
-   Options ExecCGI
-   AllowOverride None
-   Order allow,deny
-   Allow from all
-#  Order deny,allow
-#  Deny from all
-#  Allow from 127.0.0.1
-   AuthName "Nagios Access"
-   AuthType Basic
-   AuthUserFile /etc/nagios/htpasswd.users
-   Require valid-user
-</Directory>
-
-Alias /nagios "/usr/share/nagios"
-
-<Directory "/usr/share/nagios">
-   SSLRequireSSL
-   Options None
-   AllowOverride None
-   Order allow,deny
-   Allow from all
-#  Order deny,allow
-#  Deny from all
-#  Allow from 127.0.0.1
-   AuthName "Nagios Access"
-   AuthType Basic
-   AuthUserFile /etc/nagios/htpasswd.users
-   Require valid-user
-</Directory>
-EnD
-cat >/etc/httpd/conf.d/nagrestconf.conf <<EnD
-Alias /nagrestconf "/usr/share/nagrestconf/htdocs/nagrestconf"
-
-<Directory /usr/share/nagrestconf/htdocs/nagrestconf/>
-
-  SSLRequireSSL
-
-  # Only allow from the local host
-  #Order deny,allow
-  #Deny from all
-  #Allow from 127.0.0.1
-
-  AllowOverride All
-
-  # Require authentication
-  AuthName "Nagrestconf Access"
-  AuthType Basic
-  AuthUserFile /etc/nagios/nagrestconf.users
-  Require valid-user
-
-</Directory>
-EnD
-cat >/etc/httpd/conf.d/rest.conf <<EnD
-Alias /rest /usr/share/nagrestconf/htdocs/rest
-
-<Directory /usr/share/nagrestconf/htdocs/rest/>
-
-  SSLRequireSSL
-
-  # Only allow from the local host
-  #Order deny,allow
-  #Deny from all
-  #Allow from 127.0.0.1
-
-  AllowOverride All
-
-  # Require authentication
-  AuthName "REST Access"
-  AuthType Basic
-  AuthUserFile /etc/nagios/rest.users
-  Require valid-user
-
-</Directory>
-EnD
-----
-
-Activate the new httpd configuration
-
-----
-/etc/init.d/httpd restart
-----
-
-Configure the system
-++++++++++++++++++++
-
-Delete the 'local' configuration created previously and copy the nagrestconf example configuration again.
-
-----
-/etc/init.d/nagios stop
-cd /etc
-rm -rf nagios
-cp -av /usr/share/doc/nagrestconf-1*/initial-config/ nagios
-----
-
-*Optionally* create a new `/etc/nagios/cgi.cfg' - this allows any authenticated
-to use the gui in read/write mode, except the `nagios' user, who has read-only
-access.
-
-----
-cat >/etc/nagios/cgi.cfg <<EnD
-main_config_file=/etc/nagios/nagios.cfg
-physical_html_path=/usr/share/nagios
-url_html_path=/nagios
-show_context_help=0
-use_pending_states=1
-use_authentication=1
-use_ssl_authentication=0
-authorized_for_system_information=nagiosadmin
-authorized_for_configuration_information=nagiosadmin
-authorized_for_system_commands=nagiosadmin
-authorized_for_all_services=*
-authorized_for_all_hosts=*
-authorized_for_all_service_commands=*
-authorized_for_all_host_commands=*
-authorized_for_read_only=nagios
-default_statusmap_layout=5
-default_statuswrl_layout=4
-ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
-refresh_rate=90
-result_limit=100
-escape_html_tags=0
-action_url_target=_blank
-notes_url_target=_blank
-lock_author_names=1
-EnD
-----
-
-Comment out existing broker_module lines and append new lines.
-
-----
-# LIVESTATUS
-sed -i 's/\(broker_module=.*livestatus\.o.*\)/#\1/' /etc/nagios/nagios.cfg
-# MOD_GEARMAN
-sed -i 's/\(broker_module=.*mod_gearman\.o.*\)/#\1/' /etc/nagios/nagios.cfg
-echo 'broker_module=/usr/lib64/mod_gearman/mod_gearman.o config=/etc/mod_gearman/mod_gearman_neb.conf' \
-    >>/etc/nagios/nagios.cfg
-# PNP4NAGIOS
-sed -i 's/\(broker_module=.*npcdmod\.o.*\)/#\1/' /etc/nagios/nagios.cfg
-----
-
-Mod_gearman adjustments (Change 'the_shared_key' to the correct key).
-
-----
-sed -i 's/^key=.*/key=the_shared_key/' \
-    /etc/mod_gearman/mod_gearman_neb.conf \
-    /etc/mod_gearman/mod_gearman_worker.conf
-----
-
-Add the initial users.
-
-----
-htpasswd -c /etc/nagios/rest.users nagrestconf
-htpasswd -c /etc/nagios/htpasswd.users nagiosadmin
-htpasswd -b /etc/nagios/htpasswd.users nagios nagios
-htpasswd -c /etc/nagios/nagrestconf.users your_userid
-----
-
-Make sure things are set to start up on initial boot.
-
-----
-chkconfig nrpe on
-chkconfig gearmand on
-chkconfig mod_gearman_worker on
-chkconfig nagios on
-chkconfig httpd on
-----
-
-Point the worker at the Master Nagios. Change `MASTER_NAGIOS_IP' to the IP address of
-the Master Nagios.
-
-----
-MASTER_IP_ADDR=MASTER_NAGIOS_IP
-sed -i 's/\(^#dupserver=.*\)/\1\ndupserver=$MASTER_IP_ADDR:4730/' /etc/mod_gearman/mod_gearman_worker.conf
-sed -i 's/\(^#dcc=.*\)/\1\ndcc=$MASTER_IP_ADDR/' /etc/nagrestconf/restart_nagios.conf
-/etc/init.d/mod_gearman_worker restart
-----
-
-*Optional* - If the Master Nagios is running in a chroot allow svn and ssh to use the chroot port.
-
-----
-# ONLY DO THIS IF THE MASTER IS IN A CHROOT
-# Add 'tun1 = ssh -p 2222' to the '[tunnels]' section in '~/.subversion/config'.
-cat <<EnD >>/etc/nagrestconf/restart_nagios.conf
-SSH=tun1
-SSH_OPTS="-p 2222"
-EnD
-----
-
-Make sure auto-login works. For security, only a limited number of commands
-should be allowed to be executed using the svnsync account on the Nagios
-Master.
-
-----
-ssh -p 2222 svnsync@MASTER_NAGIOS ls /
-----
-
-A root directory listing MUST succeed before running slc_configure below.
-
-*Log onto the Master Nagios* normally as root now and run the following code,
-supplying the new folder (environment) name when asked, then log out.
-
-----
-chroot /var/nagios dcc_configure
-sed -i 's/\(<Location.*\/thruk>\)/\1\n    SSLOptions +FakeBasicAuth +StdEnvVars\n    SSLRequireSSL/' \
-    /var/nagios/etc/httpd/conf.d/thruk.conf
-----
-
-*Go back to the new Nagios Worker.*
-
-Add the new environment supplying the new folder (environment) name when asked.
-
-----
-slc_configure --usedcc
-----
-
-Set up all the custom service-sets, contacts, etc. in a customised
-`REST_setup_local.sh' script then run it.  A few variables at the top of the
-script will need changing now that extra security has been added.
-
-----
-cd
-bash ./REST_setup_local.sh
-----
-
-Restart everything.
-
-----
-/etc/init.d/httpd restart
-/etc/init.d/gearmand restart
-/etc/init.d/mod_gearman_worker restart
-/etc/init.d/nagios restart
-----
-
-*Final Steps*
-
-Due to the change in security settings the nagrestconf GUI will not work, and
-'/etc/nagrestconf/nagrestconf.ini' will need editing. Edit 'nagrestconf.ini'
-and check that the nagrestconf GUI works.
-
-Check that the following crontabs are present using 'crontab -l'.
-
-----
-* * * * * /usr/bin/test -e /tmp/nagios_restart_request && ( /bin/rm /tmp/nagios_restart_request; /usr/bin/restart_nagios; )
-*/10 * * * * /usr/bin/auto_reschedule_nagios_check
-----
-
-Ensure the RPM added the extra sudoers entries to /etc/sudoers:
-
-----
-Defaults:%nagios !requiretty
-%nagios ALL = NOPASSWD: /usr/sbin/nagios -v *, /usr/bin/csv2nag -y all
-----
-
-Puppet Integration
-~~~~~~~~~~~~~~~~~~
-
-TODO - For ideas see: https://github.com/mclarkson/nagrestconf-from-puppet-yaml[nagrestconf-from-puppet-yaml]
-
-TROUBLE-SHOOTING
-----------------
-
-Using in Linux Containers, Systemd-nspawn or Chroots
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-Ensure some dev files exist:
-
-----
-ln -s /proc/self/fd /dev/fd
-cd /dev
-MAKEDEV stdin
-MAKEDEV stdout
-MAKEDEV stderr
-----
-
-Gotchas
-~~~~~~~
-
-TODO - GUI won't allow some changes to the Nagios configuration where dependencies are used - have to remove them using REST first.
 
 REFERENCE
 ---------
