--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,7 +10,7 @@ CAUTION: THIS SOFTWARE IS IN THE http://en.wikipedia.org/wiki/Software_release_l
 Latest News
 ~~~~~~~~~~~
 
-22 Dec 2013 New version 1.160 (RedHat 5/6 rpms released to Sourceforge)
+22 Dec 2013 New version 1.160 (redhat 5/6 and debian packages released to Sourceforge)
 
 * The GUI now works in Internet Explorer 8, 9, 10 and 11.
 * More fields have been added to the GUI for Host Templates, Service Templates, and Contacts.
