--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.161) UNRELEASED; urgency=low
+
+  * Bug Fixes
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Wed, 03 Dec 2013 20:08:00 +0000
+
 nagrestconf (1.160) UNRELEASED; urgency=low
 
   * Bulk import, bulk refresh, autocomplete and bugfixes.
