--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.162) UNRELEASED; urgency=low
+
+  * Project icon and parent template field added.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Mon, 30 Dec 2013 20:08:00 +0000
+
 nagrestconf (1.161) UNRELEASED; urgency=low
 
   * Bug Fixes
